# wyrmplayer-control

./: LICENSE  WyrmPlayerControl.spec  main.py  pyproject.toml  settings.json
scratch/: check_flet.py  check_window.py
src/core/: config.py  hotkeys.py  state.py  websocket.py
src/services/: player_controller.py
src/ui/: hud.py  settings.py  tray.py
