[project]
name = "music-controller"
version = "0.1.0"
description = "Advanced Music Controller leveraging WebSockets and direct keyboard input for high-performance audio management."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flet>=0.84.0",
    "keyboard>=0.13.5",
    "pillow>=12.2.0",
    "pystray>=0.19.5",
    "websockets>=16.0",
]

[dependency-groups]
dev = [
    "mypy>=1.20.1",
    "ruff>=0.15.10",
]
